# forkp

./: CMakeLists.txt  main.cpp
include/forkp/: general.hpp  master.hpp  worker.hpp
source/: signal.cpp  utils.cpp
test/: test.cpp
